# GOAT-VPN

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json  input.txt  test.txt  v2ray.json
data/: shadowsocks.txt  ssh_openvpn.txt
data/json/: trojan.json
src/: main.rs
src/core/: mod.rs  proccessing.rs
src/cores/: calculate.rs  expiry.rs  mod.rs  proccessing.rs  types_error.rs
src/utils/: display_interface.rs  game.rs  mod.rs  prompt_interface.rs  structer.rs  user_files.rs
src/utils/services/: mod.rs  ovpn.rs  ss.rs  v2ray.rs
