[package]
name = "test_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
regex = "1.5.5"
requestty = "0.3.0"
ruplacer = { git = "https://github.com/GreatestOfAllTimee/ruplacer" }
