[package]
name = "test_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
chrono = "0.4.19"
colored = "2.0.0"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.5.5"
requestty = "0.3.0"
ruplacer = { git = "https://github.com/GreatestOfAllTimee/ruplacer" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = [ "preserve_order" ]}
subprocess = "0.2.9"
